--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         <div class="container">
             <%= yield %>
             <%= 'layouts/footer' %>
+            <%= debug(params) if Rails.env.development? %>
         </div>
 
     </body>
